# exam-crew

./: .env.example  .gitignore  README.md  a fazer.txt  apply_examcrew_q9_matching_preview_fix_v2.py  apply_math_fraction_loss_fix.py  apply_math_latex_and_crop_polish.py  package-lock.json  package.json  relatorio_exam_crew.txt  tsconfig.tsbuildinfo
pipeline/: list_models.py  main.py  pyproject.toml  rerun_batch.py  test_blackbox.py  test_crewai.py  test_extraction.py  test_openrouter.py  test_splitter.py
pipeline/src/: config.py  crew.py  main.py
pipeline/src/agents/: image_associator.py  pdf_parser.py  question_splitter.py  structurer.py
pipeline/src/core/: __init__.py  debug_export.py  layout_ir.py  question_segmenter.py
pipeline/src/criteria/: __init__.py  audit.py  extractor.py  matcher.py  parser.py  prompts.py  run.py  urls.py
pipeline/src/normalizers/: __init__.py  common.py  fisica_quimica.py  humanities.py  matematica.py  matematica.py.bak_fraction_loss_fix  matematica.py.bak_math_latex_crop_polish  portugues.py
pipeline/src/schemas/: exam.py
pipeline/src/tasks/: associate_images.py  extract_content.py  split_questions.py  structure_validate.py
pipeline/src/tools/: pdf_extractor.py  vision_tool.py
pipeline/src/utils/: asset_integrity.py  cropper.py  cropper.py.bak_math_latex_crop_polish  doc_refs.py  generic_audit.py  history_audit.py  image_utils.py  logger.py  math_normalize.py  multiblank.py  normalizer.py  normalizer.py.bak_q9_v2  page_diagnostics.py  pdf_preflight.py  portuguese_audit.py  (+11 more)
pipeline/tests/: golden_tool.py  test_golden.py
(+38 files in other folders)
