[project]
name = "exam-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.14.5",
    "crewai-tools>=1.14.5",
    "httpx>=0.28.1",
    "litellm>=1.85.0",
    "pillow>=12.2.0",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
    "python-dotenv>=1.2.2",
]
